feat(org-scope): S3-04
